[gd_scene load_steps=13 format=3 uid="uid://bdlxq5bh2qqu2"]

[ext_resource type="Script" path="res://src/entities/interactable/interactable_component.gd" id="1_7xkwy"]
[ext_resource type="Theme" uid="uid://byoo2gb70drio" path="res://assets/themes/interactable.tres" id="2_edrs4"]
[ext_resource type="Texture2D" uid="uid://bsm0afqv1mm5" path="res://assets/art/UI/9-path-small.png" id="3_4e074"]
[ext_resource type="Texture2D" uid="uid://b1bdpwx07xxqh" path="res://assets/art/UI/small_arrow.svg" id="4_vmjau"]

[sub_resource type="Animation" id="Animation_lpkc6"]
resource_name = "FadeIN"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oadla"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hgd1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b3wib"]
_data = {
"FadeIN": SubResource("Animation_lpkc6"),
"FadeOut": SubResource("Animation_oadla"),
"RESET": SubResource("Animation_hgd1x")
}

[sub_resource type="Animation" id="Animation_8y2nm"]
resource_name = "Interacted"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Input:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.858824, 0.858824, 0, 1), Color(0.968627, 0.12549, 0.12549, 1), Color(0.858824, 0.858824, 0, 1)]
}

[sub_resource type="Animation" id="Animation_32ymx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Input:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.858824, 0.858824, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u1n0m"]
_data = {
"Interacted": SubResource("Animation_8y2nm"),
"RESET": SubResource("Animation_32ymx")
}

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qmkte"]
color = Color(0.901961, 0.901961, 0.901961, 1)

[node name="InteractableComponent" type="Node2D" node_paths=PackedStringArray("box", "title_lable", "input_lable", "seperator", "descryption_lable")]
script = ExtResource("1_7xkwy")
box = NodePath("Box")
title_lable = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Title")
input_lable = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Input")
seperator = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/HSeparator")
descryption_lable = NodePath("Box/MarginContainer/MarginContainer/VBoxContainer/Descryption")
interaction_descryption = "null"
input_text = "null"

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(34, 19.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b3wib")
}

[node name="AnimationInput" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u1n0m")
}

[node name="Box" type="VBoxContainer" parent="."]
z_index = 2
offset_right = 101.0
offset_bottom = 84.0
size_flags_horizontal = 4
theme = ExtResource("2_edrs4")
theme_override_constants/separation = -1

[node name="MarginContainer" type="MarginContainer" parent="Box"]
clip_contents = true
layout_mode = 2
theme = ExtResource("2_edrs4")
theme_override_constants/margin_right = 0

[node name="NinePatchRect" type="NinePatchRect" parent="Box/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
texture = ExtResource("3_4e074")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="MarginContainer" type="MarginContainer" parent="Box/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Box/MarginContainer/MarginContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
theme_override_constants/separation = -2

[node name="HBoxContainer" type="HBoxContainer" parent="Box/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
alignment = 1

[node name="Title" type="RichTextLabel" parent="Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
bbcode_enabled = true
text = "Null"
fit_content = true
autowrap_mode = 0

[node name="Input" type="Label" parent="Box/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.858824, 0.858824, 0, 1)
layout_mode = 2
theme = ExtResource("2_edrs4")
text = "P"

[node name="HSeparator" type="HSeparator" parent="Box/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
theme_override_styles/separator = SubResource("StyleBoxLine_qmkte")

[node name="Descryption" type="RichTextLabel" parent="Box/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_edrs4")
bbcode_enabled = true
text = "Descryption
"
fit_content = true
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="Box"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_edrs4")
texture = ExtResource("4_vmjau")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="item_rect_changed" from="Box" to="." method="_on_box_item_rect_changed"]
